# agentic-trainer

./: .gitignore  README.md  pyproject.toml
agentic_trainer/: __init__.py  agent.py  cli.py  report.py  schema.py  serve.py
