[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-trainer"
version = "0.1.0"
description = "Agentic AutoML-lite trainer for tabular CSV/XLSX: plan→validate→train→report→serve"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Venky"}]
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.2,<2.4",
  "openpyxl>=3.1,<4",
  "scikit-learn>=1.3,<2",
  "joblib>=1.3,<2",
  "fastapi>=0.110,<1",
  "uvicorn>=0.25,<1",
]

[project.scripts]
agentic-train = "agentic_trainer.cli:main"

[tool.setuptools]
packages = ["agentic_trainer"]
